// Vitest Snapshot v1

exports[`(components) atoms/heading > (blue) take snap shot 1`] = `
<div>
  <h1
    class="css-1jrmwqc-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (default) take snap shot 1`] = `
<div>
  <h1
    class="css-h2on6j-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (green) take snap shot 1`] = `
<div>
  <h1
    class="css-774k90-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (purple) take snap shot 1`] = `
<div>
  <h1
    class="css-bbjno2-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (red) take snap shot 1`] = `
<div>
  <h1
    class="css-1xynw6x-Heading"
  >
    This is test
  </h1>
</div>
`;

exports[`(components) atoms/heading > (yellow) take snap shot 1`] = `
<div>
  <h1
    class="css-h2on6j-Heading"
  >
    This is test
  </h1>
</div>
`;
